# my-reminders

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  Procfile  README.md  adg-email.html  atlassian-snap-example.cabal  babel.config.json  bitbucket-pipelines.yml  bitbucketci.yml  build-production.bash  build.js  cabal.config  config.dev.dhall  config.prod.dhall  create-test-data.bash  db-shell.bash  dev-run.bash  generate-service-descriptor.bash  get-dependencies.bash  haskell.mk  install-micros.bash  load-and-push-docker.bash  manifest.dev.dhall  manifest.dhall  manifest.local.dhall  manifest.prod.dhall  manifest.yml  micros-deploy.bash  migrate-to-forge-notes.md  my-reminders.cabal  openapi.yaml  package-lock.json  package.json  package.yaml  ping-me-connect.cabal  remind-me-connect.cabal  (+10 more)
ai-planning/: forge-clients-migration-proposal.md  improvements-proposal.md  issue-6-automated-test-suite.md
dbmigrations/: V2__create-remind-me-basics.txt  V3__add-in-oauth-support.txt  V6__remove-user-key-aaid.txt  V7__count-failed-send-attempts.txt  V9__remove-unencrypted-shared-secret.txt
docs/: about.md  faq.md  home.md
frontend/: .babelrc  .gitignore  package.json  tsconfig.json  webpack.common.js
frontend/.storybook/: config.js  preview-head.html  webpack.config.js
frontend/config/: webpack.config.prod.js
frontend/public/: index.html  robots.txt
frontend/src/: AllRemindersView.tsx  AllRemindersViewContainer.tsx  App.tsx  ConnectPanel.tsx  Data.ts  DocsPage.tsx  DocsPageContainer.tsx  HostRequest.ts  IssueView.tsx  IssueViewActions.tsx  IssueViewComponent.tsx  IssueViewContainer.tsx  Reminder.tsx  ReminderCreateContainer.tsx  ReminderCreateDialog.tsx  RemindersList.tsx  api.ts  index.tsx  page-context.ts  rc-time-picker.d.ts  types.d.ts
frontend/src/docs/: about.md  faq.md
frontend/src/stories/: AllRemindersView.stories.tsx  CreateReminder.stories.tsx  Docs.stories.tsx  IssueView.stories.tsx  IssueViewActions.stories.tsx  RemindersList.stories.tsx  data.ts  index.tsx
migrations/: foobardb.h2.db  foobardb.trace.db
migrations/conf/: flyway.properties
migrations/sql/: V1__create_atlassian_connect.sql  V2__create_remind_me_basics.sql  V3__add_in_oauth_support.sql  V4__add_support_for_aaid.sql  V4__stop_storing_user_email.sql  V5__start-storing_atlassian_account_ids.sql  V6__remove_user_key_aaid_final.sql  V7__count_failed_send_attempts.sql  V8__add_encrypted_secret_support.sql  createdb.sql
pandoc-email-templates/: example-email.markdown
production/: .gitignore  Dockerfile
remotes/connect/: .gitignore  build.js  create-test-data.bash  package.json  package.yaml  reminders.sql
remotes/connect/dbmigrations/: V1__create-atlassian-connect.txt  V4__stop-storing-user-email.txt  V5__start-storing-atlassian-account-ids.txt  V8__add-encrypted-shared-secret-support.txt
remotes/connect/frontend/: README.md  package.json  webpack.common.js
remotes/connect/resources/: my-reminders.cfg
remotes/connect/schema/: bootstrap.sh
remotes/connect/scripts/: fswatch-run.zsh  generate-service-descriptor.ts
remotes/connect/src/: AesonHelpers.hs  AppHelpers.hs  AtlassianConnect.hs  EmailContent.hs  ExpireHandlers.hs  HandlerHelpers.hs  Heartbeat.hs  LifecycleHandlers.hs  ReminderHandlers.hs  Site.hs  SnapHelpers.hs  StaticSnaplet.hs  StatisticsHandlers.hs  TenantPopulator.hs
remotes/connect/tests/: EmailContentTests.hs
resources/: connect.cfg  my-reminders.cfg  remind-me.cfg
resources/docs/: about.markdown  faq.markdown  home.markdown
schema/: bootstrap.sh  createdb.sql
scripts/: build-css.bash  build-javascript.bash  dev-build-static.bash  dev-watch-backend.bash  dev-watch-backend.ts  generate-service-descriptor.ts
snaplets/Applicaiton Configuration/: connect.cfg
snaplets/connect/: connect.cfg
snaplets/heist/templates/: connect-panel.tpl  create-reminder-v1.tpl  create-reminder-v2.tpl  create-reminder.tpl  docs.tpl  home.tpl  index.tpl  ping-create.tpl  reminder-create.tpl  view-issue-reminders.tpl  view-jira-reminders.tpl
snaplets/postgresql-simple/: devel.cfg
src/: AaidSlurpHandlers.hs  AdminHandlers.hs  AppConfig.hs  AppHelpers.hs  Application.hs  AssetManifestParser.hs  AtlassianConnect.hs  ConfigurationHelpers.hs  CustomSplices.hs  DatabaseSnaplet.hs  EmailContent.hs  EmailContext.hs  Emails.hs  EncryptSharedSecret.hs  ExpireHandlers.hs  Finder.hs  Healthcheck.hs  LifecycleHandlers.hs  Main.hs  MicrosZone.hs  MigrationHandler.hs  NetworkHelpers.hs  PingHandlers.hs  PurgeHandlers.hs  RemindMeConfiguration.hs  ReminderHandlers.hs  Site.hs  SnapHelpers.hs  StaticSnaplet.hs  StatisticsHandlers.hs  TenantJWT.hs  WebhookHandlers.hs  WithToken.hs  index.jsx  useEffectAsync.js
src/Connect/: AtlassianTypes.hs  Connect.hs  Data.hs  Descriptor.hs  Instances.hs  LifecycleResponse.hs  PageToken.hs  Routes.hs  Tenant.hs  Zone.hs
src/Data/: EnvironmentHelpers.hs  MaybeUtil.hs  Padding.hs  TimeUnitUTC.hs
src/Data/Padding/: PKCS.hs  Util.hs
src/Model/: Notify.hs  UserDetails.hs  UserDetails.hs~
src/Network/: Cryptor.hs
src/Persistence/: DormantTenant.hs  Instances.hs  Ping.hs  PostgreSQL.hs  Reminder.hs  Statistics.hs  Tenant.hs
src/__tests__/: dateHelpers.test.js  reminderPersistence.test.js  sendReminders.test.js
src/frontend/: dashboardGadget.jsx  dateHelpers.js  index.jsx  issueGlance.jsx  remindersTable.jsx  siteInfo.js  useRemindersData.js  viewYourReminders.jsx
src/resolvers/: dashboardGadget.js  index.js  issueGlance.js  reminderPersistence.js  sendReminders.js  yourReminders.js
static/: build.js  create-reminder.css  create-reminder.js  host-request.js  pagetoken.js  view-my-reminders.css  view-my-reminders.js
static/css/: anytime.5.0.5.css  create-reminder-v1.css  create-reminder.css  view-issue-reminders.css
static/email/: reminder-email.html
static/js/: common.js  doc-page-loaded.js  require.js
static/js/lib/: aui.js  (+2 more)
static/less/: app.less
tests/: EmailContentTests.hs  PingHandlersTests.hs  ReminderHandlersTests.hs  TestHelpers.hs  TestRunner.hs
tests/Connect/: RoutesTests.hs
tests/src/: TestRunner.hs
(+64 files in other folders)
