Name:                my-reminders
Version:             0.1
Synopsis:            My reminders plugin for Atlassian Cloud
Description:         Set issue reminders for the future!
License:             AllRightsReserved
Author:              Robert Massaioli, Eero Kaukonen, Sidney Shek, Avi Knoll
Maintainer:          ekaukonen@atlassian.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.20

data-files:  resources/connect.cfg

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable my-reminders
  hs-source-dirs: src

  main-is: Main.hs

  other-modules:   AtlassianConnect
                 , Data.ConfiguratorTimeUnits
                 , Data.EnvironmentHelpers
                 , Data.Padding
                 , Data.Padding.PKCS
                 , Data.Padding.Util
                 , Model.UserDetails
                 , Persistence.Instances
                 , Persistence.Reminder
                 , Persistence.PostgreSQL
                 , Persistence.Tenant
                 , Persistence.Statistics
                 , ConfigurationHelpers
                 , AppConfig
                 , ReminderHandlers
                 , ExpireHandlers
                 , CustomSplices
                 , Site
                 , SnapHelpers
                 , TenantJWT
                 , WithToken
                 , EmailContext
                 , EmailContent
                 , Healthcheck
                 , DatabaseSnaplet
                 , Heartbeat
                 , NetworkHelpers
                 , MigrationHandler
                 , Finder
                 , StatisticsHandlers

  default-language: Haskell2010
  Build-depends:
      base                      >= 4.6     && < 5
    , atlassian-connect-descriptor >= 0.2
    , atlassian-connect-core
    , process                   == 1.2.*
    , filepath                  == 1.3.*
    , directory                 >= 1.1     && < 1.3
    , MissingH                  == 1.*
    , MonadCatchIO-transformers >= 0.2.1   && < 0.4
    , aeson                     >  0.7.0.3 && < 0.8
    , base64-bytestring         == 1.0.*
    , bytestring                >= 0.9.1   && < 0.11
    , case-insensitive          == 1.*
    , cipher-aes                == 0.2.*
    , configurator              == 0.2.*
    , containers                == 0.5.*
    , heist                     == 0.14.*
    , http-client               == 0.3.*
    , http-types                == 0.8.*
    , hostname                  == 1.0
    , jwt                       >= 0.3     && < 0.5
    , lens                      == 4.*
    , mtl                       == 2.*
    , network                   == 2.4.*
    , network-api-support       == 0.1.*
    , postgresql-simple         == 0.4.*
    --, random                    >= 1.0.1.3 && < 1.1
    , resource-pool-catchio     == 0.2.1.*
    , snap                      >= 0.13.3  && < 0.14
    , snap-core                 >= 0.9     && < 0.11
    , snap-loader-static
    , snap-server
    , snaplet-postgresql-simple == 0.6.*
    , text                      >= 0.11    && <= 1.1.1.3
    , time                      >= 1.1     && < 1.5
    , transformers              == 0.3.*
    , xmlhtml                   == 0.2.*
    , hailgun                   == 0.4.*
    , hastache                  == 0.6.*
    , parallel-io               == 0.3.*
    , time-units                == 1.*
    , boxes                     == 0.1.*
    , split                     == 0.2.*
    , utf8-string               >= 0.3.8   && < 0.4

  if flag(development)
    build-depends:
      snap-loader-dynamic
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags. Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind

test-suite my-reminders-props
  type:                     exitcode-stdio-1.0
  default-language:         Haskell2010
  hs-source-dirs:           tests, src
  main-is:                  TestRunner.hs
  build-depends:
      base
    , atlassian-connect-descriptor
    , process                   == 1.2.*
    , filepath                  == 1.3.*
    , directory                 >= 1.1     && < 1.3
    , Cabal
    , QuickCheck                 == 2.7.*
    , quickcheck-instances       == 0.3.*
    , test-framework             == 0.8.*
    , test-framework-quickcheck2 == 0.3.*

    , MissingH
    , MonadCatchIO-transformers
    , aeson
    , atlassian-connect
    , base64-bytestring
    , boxes
    , bytestring
    , case-insensitive
    , cipher-aes
    , configurator
    , containers
    , hailgun
    , heist
    , http-client
    , http-media
    , http-types
    , hostname
    , jwt
    , lens
    , mtl
    , network
    , network-api-support
    , hastache
    , parallel-io
    , postgresql-simple
    , resource-pool-catchio
    , snap
    , snap-core
    , snap-loader-static
    , snap-server
    , snaplet-postgresql-simple
    , tagsoup
    , text
    , time
    , time-units
    , transformers
    , xmlhtml
    , boxes
    , split
    , utf8-string
