Name:                my-reminders
Version:             0.9
Synopsis:            My reminders plugin for Atlassian Cloud
Description:         Set issue reminders for the future!
License:             MIT
Author:              Robert Massaioli, Eero Kaukonen, Sidney Shek, Avi Knoll
Maintainer:          ekaukonen@atlassian.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.20

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable my-reminders
  hs-source-dirs: src

  main-is: Main.hs

  other-modules:   AtlassianConnect
                 , Data.ConfiguratorTimeUnits
                 , Data.EnvironmentHelpers
                 , Data.Padding
                 , Data.Padding.PKCS
                 , Data.Padding.Util
                 , Model.UserDetails
                 , Paths_my_reminders
                 , Persistence.Instances
                 , Persistence.Reminder
                 , Persistence.PostgreSQL
                 , Persistence.Tenant
                 , Persistence.Statistics
                 , ConfigurationHelpers
                 , AppConfig
                 , ReminderHandlers
                 , ExpireHandlers
                 , CustomSplices
                 , Site
                 , SnapHelpers
                 , TenantJWT
                 , WithToken
                 , EmailContext
                 , EmailContent
                 , Healthcheck
                 , DatabaseSnaplet
                 , Heartbeat
                 , MigrationHandler
                 , Finder
                 , StatisticsHandlers

  default-language: Haskell2010
  Build-depends:
      base                      >= 4.6     && < 5
    , atlassian-connect-descriptor >= 0.4
    , atlassian-connect-core    == 0.6.*
    , process                   == 1.2.*
    , filepath                  == 1.4.*
    , directory                 >= 1.1     && < 1.3
    , MissingH                  == 1.*
    , MonadCatchIO-transformers >= 0.2.1   && < 0.4
    , aeson                     == 0.8.*
    , base64-bytestring         == 1.0.*
    , boxes                     == 0.1.*
    , bytestring                >= 0.9.1   && < 0.11
    , case-insensitive          == 1.*
    , cipher-aes                == 0.2.*
    , configurator              == 0.3.*
    , containers                == 0.5.*
    , email-validate            == 2.*
    , hailgun                   == 0.4.*
    , hastache                  == 0.6.*
    , heist                     == 0.14.*
    , http-client               == 0.4.*
    , http-types                == 0.8.*
    , hostname                  == 1.0
    , jwt                       == 0.6.*
    , lens                      == 4.*
    , mtl                       == 2.*
    , network                   == 2.6.*
    , network-api-support       == 0.2.*
    , network-uri               == 2.6.*
    , parallel-io               == 0.3.*
    , postgresql-simple         >= 0.4
    , resource-pool-catchio     == 0.2.1.*
    , snap                      == 0.14.*
    , snap-core                 >= 0.9     && < 0.11
    , snap-loader-static
    , snap-server
    , snaplet-postgresql-simple >= 0.6.0.2
    , split                     == 0.2.*
    , text                      == 1.2.*
    , time                      == 1.5.*
    , time-units                == 1.*
    , transformers              == 0.4.*
    , utf8-string               >= 0.3.8   && < 0.4
    , uuid                      == 1.3.*
    , xmlhtml                   == 0.2.*

  if flag(development)
    build-depends:
      snap-loader-dynamic
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags. Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind

test-suite my-reminders-props
  type:                     exitcode-stdio-1.0
  default-language:         Haskell2010
  hs-source-dirs:           tests, src
  main-is:                  TestRunner.hs
  build-depends:
      base
    , QuickCheck                 == 2.7.*
    , quickcheck-instances       == 0.3.*
    , test-framework             == 0.8.*
    , test-framework-quickcheck2 == 0.3.*

    , MissingH
    , MonadCatchIO-transformers
    , aeson
    , atlassian-connect-descriptor
    , atlassian-connect-core
    , base64-bytestring
    , boxes
    , bytestring
    , case-insensitive
    , cipher-aes
    , configurator
    , containers
    , directory
    , email-validate
    , filepath
    , hailgun
    , heist
    , http-client
    , http-media
    , http-types
    , hostname
    , jwt
    , lens
    , mtl
    , network
    , network-api-support
    , network-uri
    , hastache
    , parallel-io
    , postgresql-simple
    , process
    , resource-pool-catchio
    , snap
    , snap-core
    , snap-loader-static
    , snap-server
    , snaplet-postgresql-simple
    , split
    , tagsoup
    , text
    , time
    , time-units
    , transformers
    , utf8-string
    , uuid
    , xmlhtml

 if impl(ghc < 7.10.1)
    build-depends:
      Cabal
