Name:                ping-me-connect
Version:             0.1
Synopsis:            Project Synopsis Here
Description:         Project Description Here
License:             AllRightsReserved
Author:              Robert Massaioli & Eero Kaukonen
Maintainer:          ekaukonen@atlassian.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.18

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Flag old-base
  default: False
  manual: False

Executable ping-me-connect
  hs-source-dirs: src

  main-is: Main.hs

  other-modules: AtlassianConnect
                 , Connect.Descriptor
                 , Connect.Routes
                 , Connect.Connect
                 , Connect.PageToken
                 , Persistence.Tenant
                 , Persistence.PostgreSQL
                 , Model.UserDetails
                 , PingHandlers
                 , SnapHelpers
                 , Site

  data-files:     connect.cfg

  default-language: Haskell2010
  Build-depends:
   bytestring                  >= 0.9.1   && < 0.11
   , heist                     >= 0.12    && < 0.14
   , MonadCatchIO-transformers >= 0.2.1   && < 0.4
   , mtl                       == 2.*
   , snap                      == 0.13.*
   , snap-core                 >= 0.9     && < 0.11
   , snap-server               >= 0.9     && < 0.11
   , snap-loader-static        == 0.9.*
   , postgresql-simple         == 0.4.*
   , snaplet-postgresql-simple
   , text                      == 0.11.*
   , time                      >= 1.1     && < 1.5
   , xmlhtml                   >= 0.1
   , aeson
   , MissingH                  ==1.*
   , containers                ==0.5.*
   , transformers              ==0.3.*
   , resource-pool-catchio     ==0.2.1.*
   , network                   ==2.4.*
   , network-api-support       ==0.1.*
   , http-types                ==0.8.*
   , http-media                ==0.1.*
   , http-client               ==0.3.*
   , atlassian-connect         == 0.1.*
   , jwt                       == 0.3.*
   , case-insensitive          == 1.*
   , cipher-aes                == 0.2.*
   , base64-bytestring         == 1.0.*
   , configurator              == 0.2.*

  if flag(old-base)
    build-depends:
      base                      >= 4        && < 4.4
     ,lens                      >= 3.7.6    && < 3.8
  else
    build-depends:
      base                      >= 4.4      && < 5
     ,lens                      >= 3.7.6    && < 3.10

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

test-suite web-api-testsuite
  default-language:         Haskell2010
  type:                     exitcode-stdio-1.0
  main-is:                  TestRunner.hs
  hs-source-dirs:           tests/src, src
  build-depends:            base < 5 && >= 4.4
                          , tasty >= 0.7
                          , tasty-th >= 0.1
                          , tasty-hspec >= 0.1
                          , tasty-hunit >= 0.4
                          , tasty-quickcheck >= 0.3
                          , HUnit
                          , lens                      >= 3.7.6
                          , QuickCheck >= 2.4.0.1
                          , ghc-prim
                          , containers                >= 0.5
                          , bytestring                >= 0.9.1   && < 0.11
                          , heist                     >= 0.12    && < 0.14
                          , MonadCatchIO-transformers >= 0.2.1   && < 0.4
                          , mtl                       >= 2       && < 3
                          , snap                      >= 0.13    && < 0.14
                          , snap-core                 >= 0.9     && < 0.11
                          , snap-server               >= 0.9     && < 0.11
                          , snap-loader-static        >= 0.9     && < 0.10
                          , text                      >= 0.11    && < 0.12
                          , time                      >= 1.1     && < 1.5
                          , xmlhtml                   >= 0.1
                          , aeson
                          
