Name:                ping-me-connect
Version:             0.1
Synopsis:            Pingme plugin for Atlassian JIRA
Description:         Send yourself issue reminders in the future!
License:             AllRightsReserved
Author:              Robert Massaioli, Eero Kaukonen, Sidney Shek, Avi Knoll
Maintainer:          ekaukonen@atlassian.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >= 1.20

data-files:  resources/connect.cfg

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable ping-me-connect
  hs-source-dirs: src

  main-is: Main.hs

  other-modules:   AtlassianConnect
                 , Connect.AtlassianTypes
                 , Connect.Connect
                 , Connect.Data
                 , Connect.Descriptor
                 , Connect.PageToken
                 , Connect.Routes
                 , Data.Padding
                 , Data.Padding.PKCS
                 , Data.Padding.Util
                 , Model.UserDetails
                 , Persistence.Ping
                 , Persistence.PostgreSQL
                 , Persistence.Tenant
                 , ConfigurationHelpers
                 , RemindMeConfiguration
                 , PingHandlers
                 , ExpireHandlers
                 , Site
                 , SnapHelpers
                 , TenantJWT
                 , WithToken
                 , EmailContent

  default-language: Haskell2010
  Build-depends:
      base                      >= 4.4     && < 5
    , MissingH                  == 1.*
    , MonadCatchIO-transformers >= 0.2.1   && < 0.4
    , aeson                     >  0.7.0.3 && < 0.8
    , atlassian-connect         == 0.1.*
    , base64-bytestring         == 1.0.*
    , bytestring                >= 0.9.1   && < 0.11
    , case-insensitive          == 1.*
    , cipher-aes                == 0.2.*
    , configurator              == 0.2.*
    , containers                == 0.5.*
    , heist                     >= 0.12    && < 0.14
    , http-client               == 0.3.*
    , http-media                == 0.1.*
    , http-types                == 0.8.*
    , jwt                       >= 0.3     && < 0.5
    , lens                      == 4.*
    , mtl                       == 2.*
    , network                   == 2.4.*
    , network-api-support       == 0.1.*
    , postgresql-simple         == 0.4.*
    , resource-pool-catchio     == 0.2.1.*
    , snap                      == 0.13.*
    , snap-core                 >= 0.9     && < 0.10
    , snap-loader-static
    , snap-server
    , snaplet-postgresql-simple == 0.5.*
    , text                      >= 0.11    && <= 1.1.1.2
    , time                      >= 1.1     && < 1.5
    , transformers              == 0.3.*
    , xmlhtml                   == 0.2.*
    , hailgun                   > 0.1.0.0 && < 0.2
    , pandoc                    >= 1.13    && < 1.14
    , parallel-io               == 0.3.*

  if flag(development)
    -- TODO(CHA-20): Fix snap-loader-dynamic dependency conflicts
    -- build-depends:
    --   snap-loader-dynamic
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags. Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans

test-suite web-api-testsuite
  default-language:         Haskell2010
  type:                     exitcode-stdio-1.0
  main-is:                  TestRunner.hs
  hs-source-dirs:           tests/src, src
  build-depends:
